fix vertical align

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ tbody td.field {
 	padding-top: 20px;
 	padding-bottom: 20px;
 	font-size: 17px;
-	vertical-align: middle;
+	vertical-align: middle !important;
 }
 .green {
 	color: green;
